--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: required
 services:
   - docker
 
+command: --default-authentication-plugin=mysql_native_password
+
 matrix:
   include:
     - env:
@@ -15,10 +17,7 @@ matrix:
 
 before_script:
   - ./.travis.install-mysql.sh
-  - export COVERALLS_PARALLEL=true
 
 script: bash ./install.sh -h 127.0.0.1 -P 3306 -u root
 
-after_success:
-  - coveralls
 
