update auth method to mysql_native_password all root user lines

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ sudo: required
 services:
   - docker
 
+command: --default-authentication-plugin=mysql_native_password
+
 matrix:
   include:
     - env:
