--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,15 @@ matrix:
         - DB=mysql:5.6
     - env:
         - DB=mysql:5.7
-    - env:
-        - DB=mysql:8.0
+#    - env:
+#        - DB=mysql:8.0
 
 before_script:
   - ./.travis.install-mysql.sh
 
-script: bash ./install.sh -h 127.0.0.1 -P 3306 -u mytap
-
-
+script:
+  - bash ./install.sh -u mytap
+  - bash ./install.sh -u root
+  - bash ./install.sh -u root -p
+  - bash ./install.sh -h 127.0.0.1 -u root -p
+  
