--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ matrix:
 
 before_script:
   - ./.travis.install-mysql.sh
+  - ./scripts/install_my_prove.sh
 
 script:
   - bash ./install.sh -h 127.0.0.1 -u mytap
-  
+  - bash my_prove -v -h 127.0.0.1 -u mytap tests/*.my 
