--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,4 @@ before_script:
 
 script:
   - bash ./install.sh -h 127.0.0.1 -u mytap
-  - bash my_prove -v -h 127.0.0.1 -u mytap tests/*.my 
+  - bash sudo my_prove -v -h 127.0.0.1 -u mytap tests/*.my 
