try another way

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
 
 before_script:
   - bash ./.travis.install-mysql.sh
-  - sudo ./scripts/install_my_prove.sh
+  - bash ./scripts/semi_install_my_prove.sh
 
 script:
   - bash ./install.sh -h 127.0.0.1 -u mytap
