--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ matrix:
 
 before_install:
   # bootstrap modules needed to manipulate dist
+  - "cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)"
   - "cpanm Module::Build"
 
 before_script:
