--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ before_install:
   # bootstrap modules needed to manipulate dist
   - "cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)"
   - "cpanm Module::Build"
+  - "cpanm Test::Pod"
+  - "cpanm Test::Pod::Coverage"
 
 before_script:
   - bash ./.travis.install-mysql.sh
