--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: required
 services:
   - docker
 
+
 command: --default-authentication-plugin=mysql_native_password
 
 matrix:
@@ -14,6 +15,13 @@ matrix:
         - DB=mysql:5.7
     - env:
         - DB=mysql:8.0
+
+before_install:
+  # bootstrap modules needed to manipulate dist
+  - "cpanm --local-lib=~/perl5 local::lib && eval $(perl -I ~/perl5/lib/perl5/ -Mlocal::lib)"
+  - "cpanm Module::Build"
+  - "cpanm Test::Pod"
+  - "cpanm Test::Pod::Coverage"
 
 before_script:
   - bash ./.travis.install-mysql.sh
